--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gulp": "^3.9.1",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass": "^1.0.0-beta.5.2"
   },
   "scripts": {
