--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2017": "^6.24.1",
+    "browserify": "^16.1.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "sass": "^1.0.0-beta.5.2"
+    "sass": "^1.0.0-beta.5.2",
+    "watchify": "^3.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
