--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "browserify": "^16.1.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sass": "^1.0.0-beta.5.2",
+    "vinyl-transform": "^1.0.0",
     "watchify": "^3.10.0"
   },
   "scripts": {
