--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "browserify": "^16.1.0",
+    "domready": "^1.0.8",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.5.0",
