--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
+    "babelify": "^8.0.0",
     "browserify": "^16.1.0",
     "domready": "^1.0.8",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sass": "^1.0.0-beta.5.2",
+    "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.10.0"
   },
   "scripts": {
